bad/bin_op_lth_void_class.example_compiler_output
ERROR
[1mbad/bin_op_lth_void_class.lat:6:8: [1;31merror: [0;1moperator < is defined only for int values and string values, not `void` and `Y`[m
	foo() < new Y;
	      [1;32m^[m
